# basin

./: .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  Makefile  README.md  dagster_related.txt  docker-compose.yaml  envrc_template  indoor_sensor_config.json  pyproject.toml
.agents/skills/basin-code-reviewer/: SKILL.md
.agents/skills/basin-dagster-asset-implementer/: SKILL.md
.agents/skills/basin-test-coverage-guardian/: SKILL.md
.agents/skills/speckit-analyze/: SKILL.md
.agents/skills/speckit-clarify/: SKILL.md
.agents/skills/speckit-implement/: SKILL.md
.agents/skills/speckit-specify/: SKILL.md
.agents/skills/speckit-tasks/: SKILL.md
.codex/: config.toml
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: build-and-deploy.yaml  build-docs.yaml  run-test.yaml
.specify/memory/: constitution.md
.specify/scripts/bash/: common.sh  create-new-feature.sh  update-agent-context.sh
.specify/templates/: plan-template.md
infrastructure/: README.md  cloudformation_template.yaml
orchestrator/: Dockerfile  __init__.py  constants.py  dagster.yaml  execute_unit_tests.sh  pyproject.toml  requirements.in  requirements.txt  run_dagster_local.sh  setup.py  workspace.yaml
orchestrator/assets/: business_travel.py  campus_facility.py  campus_utility.py  commuting.py  confluence_wiki.py  construction.py  engagement.py  food.py  ghg_footprint.py  ghg_inventory.py  indoor_heat.py  parking.py  postgres.py  purchased_goods.py  transit.py  utils.py  waste.py  website_content_health.py
orchestrator/jobs/: business_travel_job.py  campus_utility.py  commuting_job.py  confluence_wiki_snapshot.py  construction_job.py  dlc_footprint.py  engagement.py  food_job.py  ghg_inventory.py  indoor_heat_calibration_job.py  indoor_heat_job.py  parking_job.py  purchased_goods.py  waste_job.py  website_content_health.py
orchestrator/pipes/: README.md  purchased_goods_invoice.py
orchestrator/remote_tasks/: __init__.py  website_content_health.py
orchestrator/resources/: confluence.py  datahub.py  dropbox.py  ecs.py  mit_warehouse.py  playwright.py  postgres_io_manager.py
orchestrator/schedules/: mitos_warehouse.py
orchestrator/scripts/: verify_website_content_health_ingest.py
orchestrator/sensors/: s3_bucket.py
orchestrator/tests/: conftest.py  test_orchestrator_init.py
orchestrator/tests/assets/: test_confluence_wiki.py  test_construction.py  test_indoor_heat.py  test_parking.py  test_purchased_goods.py  test_transit.py  test_website_content_health.py
orchestrator/tests/jobs/: test_confluence_wiki_snapshot.py  test_website_content_health.py
orchestrator/tests/remote_tasks/: test_website_content_health.py
orchestrator/tests/resources/: test_confluence.py  test_datahub.py  test_dropbox.py  test_ecs.py  test_mit_warehouse.py  test_playwright.py  test_postgres.py
orchestrator/utils/: dbt.py
specs/: BACKLOG.md  README.md
specs/001-platform-baseline/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/001-platform-baseline/checklists/: requirements.md
specs/002-website-content-health/: plan.md  spec.md
specs/007-confluence-wiki-snapshot/: plan.md  spec.md
warehouse/: .sqlfluff  .sqlfluffignore  dbt_project.yml  docstyle.css  profiles.yml  requirements.txt  setup.sh
warehouse/models/: overview.md  sources.yml
warehouse/seeds/: parking_tracked_lots.csv  schema.yml
warehouse/snapshots/: stg_ghg_inventory_snapshot.sql
(+56 files in other folders)
