[project]
name = "orchestrator"
version = "0.0.3"
requires-python = ">=3.13"
dependencies = [
    "dbt-postgres==1.10.0",
    "dagster==1.12.22",
    "dagster-aws==0.28.22",
    "dagster-dbt==0.28.22",
    "dagster-pipes==1.12.22",
    "dagster-pandas==0.28.22",
    "dagster-pandera==0.28.22",
    "dagster-postgres==0.28.22",
    "playwright",
]

[project.optional-dependencies]
dev = ["dagster-webserver==1.12.22", "pytest"]
tests = ["pytest", "pytest-mock"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.dagster]
module_name = "orchestrator"
version = "0.0.3"
